--- a/public/css/write.css
+++ b/public/css/write.css
@@ -190,6 +190,29 @@ body {
   width: 50px;
   font-size: var(--fs3);
 }
+/* .recipe_add .recipe_add_box {
+  width: 400px;
+  margin-bottom: 1rem;
+  position: relative;
+}
+.recipe_add .recipe_add_box input {
+  width: 100%;
+  height: 40px;
+  padding: 0.25rem 1rem;
+  font-size: var(--fs2);
+  border: 1px solid var(--c_point2);
+  background-color: var(--c_point1);
+  margin-left: 0.25rem;
+}
+#step_add_btn {
+  position: absolute;
+  cursor: pointer;
+  width: 100px;
+  height: 50px;
+  top: 50%;
+  transform: translateY(-50%);
+  right: -150px;
+} */
 
 /* ////////// add_button 영역 ////////// */
 .add_button_box {
